sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:5: error: not found: value count
  count = -1
  ^AlgBubbleSort3:6: error: not found: value count
  while (count!=0){
         ^AlgBubbleSort3:7: error: not found: value count
    count=0
    ^AlgBubbleSort3:12: error: not found: value count
          count=count+1
          ^