sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
  var n= getNombreValeurs()
  var dejaTrie=0
  count = -1
  while (count!=0){
    count=0
    for (nbTour <- 0 to n-1){ 
      for (parcours <- 0 to n-2-nbTour){
        if (getValeur(parcours)>getValeur(parcours+1)){
          echange(parcours	,parcours+1)
          count=count+1
        }
      }
    }
  }  
}
  
  
